<resources>
    <string name="app_name">FAITH</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="post_overview">Post Overview</string>
    <string name="quotes">Inspirational Quotes</string>

    <!-- Posts -->
    <string name="create_post">Create Post</string>
    <string name="add_post">Add Post</string>
    <string name="edit_post">Edit</string>
    <string name="reactions">Reactions</string>
    <string name="cross">X</string>
    <string name="link">Link</string>
    <string name="postText">Post text</string>

    <!-- Reactions -->
    <string name="add_reaction">Add Reaction</string>
    <string name="add">Add</string>

    <!-- Monitor Overview -->
    <string name="newPosts">New</string>
    <string name="readPosts">Read</string>
    <string name="closedPosts">Closed</string>
    <string name="close">Close</string>

    <!-- Monitor Overview -->
    <string name="changeUsername">Change Username</string>

    <!-- Quotes -->
    <string name="newQuote">Get new quote</string>
    <string name="inspirationalQuote">Inspirational Quote</string>

    <!-- Strings related to login | Need to remove this eventually, in favor of auth0 strings -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string> <!--

    Auth0 identifiers and settings
    ==============================
    -->

    <!-- Identifiers -->
    <string name="com_auth0_scheme">app</string>

    <!-- Settings -->
    <string name="login_scopes">openid profile email read:current_user update:current_user_metadata</string>
    <string name="login_audience">https://%1$s/api/v2/</string>


    <!--
    Main activity
    =============
    -->

    <!-- Title -->
    <string name="initial_title">Welcome to the app!</string>
    <string name="logged_in_title">You\'re logged in.</string>
    <string name="logged_out_title">You\'re logged out.</string>

    <!-- "Log in" and "Log out" buttons -->
    <string name="button_login">Log in</string>
    <string name="button_logout">Log out</string>

    <!-- User profile -->
    <string name="user_profile">
        Name: %1$s\n
        Email: %2$s
    </string>

    <!-- "Get" and "Set" buttons -->
    <string name="button_get">Get</string>
    <string name="button_set">Set</string>

    <!-- SnackBar messages-->
    <string name="login_success_message">Successfully logged in! %1$s</string>
    <string name="login_failure_message">Failed to log in. %1$s</string>
    <string name="general_failure_with_exception_code">Failed - exception code: %1$s</string>
    <string name="general_success_message">Success!</string>

</resources>